Refactoring et nettoyage du code