@@ -26,7 +26,7 @@ import java.net.http.*;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.util.*;
-import java.util.stream.Collectors;
+
 
 
 @Service
@@ -111,8 +111,8 @@ public class HospitalSpecialityLoader {
                 .returnBundle(Bundle.class)
                 .execute();
 
-        String idHospital="";
-        int count = 0;
+        String idHospital;
+
         // Boucle sur toutes les pages
         while (bundle != null) {
             // Extraire les résultats de la page courante
@@ -120,7 +120,7 @@ public class HospitalSpecialityLoader {
                 org.hl7.fhir.r4.model.Organization org = (org.hl7.fhir.r4.model.Organization) entry.getResource();
                 Organization organization = new Organization();
 
-                String adresse = "";
+                String adresse;
                 String rue = org.getAddressFirstRep().getLine().getFirst().getValue();
                 if (rue.contains("BP")) {
                     rue = rue.substring(0, rue.indexOf("BP") - 1);
@@ -150,7 +150,7 @@ public class HospitalSpecialityLoader {
 
         for(Organization organization : listOrganization){
             ArrayList<String> listSpecialties=retrieveSpecialtiesFromOrganization(organization);
-            if(listSpecialties.size()>0){
+            if(!listSpecialties.isEmpty()){
                 Hospital hospital = new Hospital();
                 hospital.setAddress(organization.getAdress());
                 hospital.setName(organization.getName());
@@ -175,7 +175,7 @@ public class HospitalSpecialityLoader {
 
     public ArrayList<String> retrieveSpecialtiesFromOrganization(Organization organization){
         log.info("Import des spécialités pour hopital: "+organization.getName());
-        Set<String> set = new HashSet<String>(); // List → Set (supprime les doublons)
+        Set<String> set = new HashSet<>(); // List → Set (supprime les doublons)
 
         // Utilisation directe dans la requête suivante
         Bundle praticiensRole = client.search()
@@ -239,46 +239,51 @@ public class HospitalSpecialityLoader {
 
     public void loadSpecialitiesFromFHIR() throws Exception {
         // 1. Télécharger le fichier XML
-        HttpClient httpClient = HttpClient.newHttpClient();
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create("https://mos.esante.gouv.fr/NOS/TRE_R38-SpecialiteOrdinale/FHIR/TRE-R38-SpecialiteOrdinale/TRE_R38-SpecialiteOrdinale-FHIR.xml"))
-                .header("Accept", "application/xml")
-                .GET()
-                .build();
+        try {
+            HttpClient httpClient = HttpClient.newHttpClient();
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create("https://mos.esante.gouv.fr/NOS/TRE_R38-SpecialiteOrdinale/FHIR/TRE-R38-SpecialiteOrdinale/TRE_R38-SpecialiteOrdinale-FHIR.xml"))
+                    .header("Accept", "application/xml")
+                    .GET()
+                    .build();
 
-        HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
-        if(response.statusCode() == 200){
-            hospitalRepository.deleteAll();
-            specialityRepository.deleteAll();
-            // 2. Parser le XML avec HAPI FHIR
-            FhirContext ctx = FhirContext.forR4();
-            IParser parser = ctx.newXmlParser();
-            CodeSystem codeSystem = parser.parseResource(CodeSystem.class, response.body());
+            HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
+            if (response.statusCode() == 200) {
+                hospitalRepository.deleteAll();
+                specialityRepository.deleteAll();
+                // 2. Parser le XML avec HAPI FHIR
+                FhirContext ctx = FhirContext.forR4();
+                IParser parser = ctx.newXmlParser();
+                CodeSystem codeSystem = parser.parseResource(CodeSystem.class, response.body());
 
-            // 3. Extraire les concepts (spécialités)
-            List<Speciality> specialities = codeSystem.getConcept().stream()
-                    .filter(concept -> concept.getDisplay() != null)
-                    .map(concept -> {
-                        Speciality entity = new Speciality();
-                        entity.setCode(concept.getCode());       // ex: "SM06"
-                        String display=concept.getDisplay();
-                        entity.setName(display.substring(0,display.indexOf(" (")));    // ex: "Oncologie"
-                        return entity;
-                    })
-                    .collect(Collectors.toList());
+                // 3. Extraire les concepts (spécialités)
+                List<Speciality> specialities = codeSystem.getConcept().stream()
+                        .filter(concept -> concept.getDisplay() != null)
+                        .map(concept -> {
+                            Speciality entity = new Speciality();
+                            entity.setCode(concept.getCode());       // ex: "SM06"
+                            String display = concept.getDisplay();
+                            entity.setName(display.substring(0, display.indexOf(" (")));    // ex: "Oncologie"
+                            return entity;
+                        })
+                        .toList();
 
-            // 4. Sauvegarder en base (uniquement si pas déjà présent)
-            specialities.forEach(speciality ->
-                    specialityRepository.findByName(speciality.getName())
-                            .orElseGet(() -> specialityRepository.save(speciality))
-            );
-            System.out.println(specialities.size() + " spécialités chargées.");
+                // 4. Sauvegarder en base (uniquement si pas déjà présent)
+                specialities.forEach(speciality ->
+                        specialityRepository.findByName(speciality.getName())
+                                .orElseGet(() -> specialityRepository.save(speciality))
+                );
+                System.out.println(specialities.size() + " spécialités chargées.");
+            }
+        }
+        catch (Exception e) {
+            log.error(e.getMessage());
         }
     }
 
     @Getter
     @Setter
-    public class Organization {
+    public static class Organization {
         private String adress;
         private String id;
         private String name;
